# wgslsmith-flow

./: build.py
crates/ast/src/: func.rs  types.rs  writer.rs
crates/common/src/: lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: cli.rs  main.rs
crates/data_race_generator/: Cargo.toml
crates/data_race_generator/src/: cli.rs  data_race_gen.rs  lib.rs  main.rs
crates/data_race_reducer/: Cargo.toml
crates/data_race_reducer/src/: cli.rs  main.rs
crates/data_race_runner/: Cargo.toml
crates/data_race_runner/src/: cli.rs  lib.rs  main.rs
crates/dawn/: build.rs
crates/dawn/src/: bindings.rs  lib.cpp
crates/generator/src/: gen.rs
crates/harness-frontend/: Cargo.toml
crates/harness-frontend/src/: lib.rs
crates/harness-types/: Cargo.toml
crates/harness-types/src/: lib.rs
crates/harness/src/: wgpu.rs
crates/parser/src/: lib.rs
crates/reflection-types/: Cargo.toml
crates/reflection-types/src/: lib.rs
crates/reflection/src/: lib.rs
crates/thread/src/: cli.rs  lib.rs
crates/ub/: Cargo.toml
crates/ub/src/: cli.rs
crates/wgslsmith/: Cargo.toml
crates/wgslsmith/src/: main.rs
mismatch-results/intel-apple/: info.json  race.wgsl  safe.wgsl
