[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wgslsmith-coordinator"
path = "src/main.rs"

[dependencies]
bincode = "2.0.0-rc.1"
byteorder = "1.4.3"
eyre = "0.6.8"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
rand = "0.8.3"
colored = "2.0.0"

ast = {path = "../ast" }
parser = { path = "../parser" }
data_race_generator = { path = "../data_race_generator" }
data_race_runner = { path = "../data_race_runner" }

reflection = { path = "../reflection" }
reflection-types = { path = "../reflection-types" }

common = { path = "../common" }
types = { path = "../harness-types", package = "harness-types" }
harness = { path = "../harness" }

[dependencies.clap]
version = "3.0.0"
features = ["derive"]
