[package]
name = "data_race_reducer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
byteorder = "1.4.3"
eyre = "0.6.8"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
rand = "0.8.3"
colored = "2.0.0"

ast = {path = "../ast" }
parser = { path = "../parser" }
data_race_generator = { path = "../data_race_generator" }
reflection = { path = "../reflection" }
reflection-types = { path = "../reflection-types" }
common = { path = "../common" }
types = { path = "../harness-types", package = "harness-types" }
harness = { path = "../harness" }

[dependencies.clap]
version = "3.0.0"
features = ["derive"]