[package]
name = "reflection-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }

common = { path = "../common" }
